fix: Reduce whitespace at end of post

--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -34,7 +34,7 @@ h1 + .post-meta {
 .post-tail-wrapper {
   @extend %text-sm;
 
-  margin-top: 6rem;
+  margin-top: 3rem;
   border-bottom: 1px double var(--main-border-color);
 
   .license-wrapper {
